# openchute

./: Cargo.toml  README.md  build.rs  example.dxf  index.html  tall_triangle.dxf  triangle.dxf
examples/: annular_v2.chute  cruciform.chute  dgb_v2.chute  elliptical_example.dxf  elliptical_v2.chute  example.chute  quarter-spherical.chute  ringsail.chute
experiments/: sphere_outline.py
src/: main.rs  web.rs
src/chute/: configurable_shapes.rs  geometry.rs  materials.rs  mod.rs  parachute.rs  sim.rs  ui.rs
